# copyclaude

./: .gitignore  CLAUDE (9).md  ClipboardListener.cs  CopyClaude.csproj  FiltreProcess.cs  FloatingWindow.cs  ForegroundWatcher.cs  LICENSE  Native.cs  ProcessFilter.cs  Program.cs  README.md  brief-fenetre-flottante.md  setup.iss
.github/workflows/: build.yml
linux/: Cargo.toml  README.md
linux/packaging/: copyclaude.desktop
linux/src/: main.rs  process_filter.rs
linux/src/x11/: atoms.rs  mod.rs  props.rs  query.rs  reader.rs  selection.rs  watcher.rs
